# infrastructure

./: .env.example  .gitignore  README.md  __main__.py
docs/: architecture-overview.md  deployment-guide.md  next-steps.md
infrastructure/: README.md  pyproject.toml
infrastructure/infrastructure/: Pulumi.yaml
infrastructure/infrastructure/src/semantest/domain/: entities.py
infrastructure/infrastructure/src/semantest/infrastructure/aws/: __init__.py  lambda_stack.py
infrastructure/infrastructure/src/semantest/infrastructure/azure/: __init__.py  function_app_stack.py
infrastructure/infrastructure/src/semantest/infrastructure/shared/: __init__.py  base.py
infrastructure/src/semantest/domain/: __init__.py
scripts/: deploy.sh  destroy.sh
semantest/nodejs.server/semantest/: INFRASTRUCTURE_READY_1050AM.md  MONITORING_1125AM.md
semantest/nodejs.server/semantest/nodejs.server/semantest/: HOUR_67_ACHIEVED_1055AM.md  MOB_SESSION_STARTED_1130AM.md
semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/: STATUS_1100AM_HOUR67.md
semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/: CHECKPOINT_1110AM_MONITORING.md
semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/nodejs.server/semantest/: CHECKPOINT_1120AM_HOUR67.md
src/semantest/: __init__.py
src/semantest/domain/: value_objects.py
